typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement15.ts.stderr
error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement15.ts:2:20
  |
2 | for (var [a, b] of X) {
  |                    ^

